fix: overflow of videodetails page

--- a/src/pages/VideoDetails/VideoDetails.module.css
+++ b/src/pages/VideoDetails/VideoDetails.module.css
@@ -1,10 +1,17 @@
 .main_container {
-  width: 100%;
-  height: 40vh;
+  width: 95%;
+  height: 35vh;
+  margin: 0 auto;
 }
 
 .pointer {
   cursor: pointer;
+}
+
+.title {
+  text-align: left;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
 .modal_container {
@@ -59,6 +66,7 @@
 
 @media screen and (min-width: 1024px) {
   .main_container {
+    width: 80%;
     margin-left: 17.5vw;
   }
 }
